--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview --config vite.config.ts"
   },
   "dependencies": {
+    "framer-motion": "^12.33.0",
+    "lucide-react": "^0.563.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "three": "^0.182.0"
